--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: entsoeapi
 Type: Package
 Title: An R Wrapper for the Entso-E API.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Kenneth Rose
+Maintainer: Kenneth Rose <kennethrose82@gmail.com>
+Description: This is a wrapper for the Entso-E API. The goal
+    is to build simple wrappers to retrieve common data.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/krose/entsoeapi
