--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(en_eic)
 export(en_load_actual_total_load)
 export(en_load_day_ahead_total_load_forecast)
 export(en_load_week_ahead_total_load_forecast)
+export(en_outages)
 export(en_outages_generation_units)
+export(en_outages_production_units)
+export(en_outages_tidy_to_ts)
 export(en_transmission_day_ahead_prices)
 export(en_transmission_forecasted_capacity)
