--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(en_eic)
 export(en_generation_agg_gen_per_type)
+export(en_generation_day_ahead_agg_gen)
+export(en_generation_day_ahead_gen_forecast_ws)
 export(en_generation_inst_gen_cap_agg)
 export(en_load_actual_total_load)
 export(en_load_day_ahead_total_load_forecast)
