--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(en_eic)
 export(en_generation_agg_gen_per_type)
+export(en_generation_codes)
 export(en_generation_day_ahead_agg_gen)
 export(en_generation_day_ahead_gen_forecast_ws)
 export(en_generation_inst_gen_cap_agg)
