--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,4 @@ export(en_outages_production_units)
 export(en_outages_tidy_to_ts)
 export(en_transmission_day_ahead_prices)
 export(en_transmission_forecasted_capacity)
+importFrom(dplyr,"%>%")
