EIC codes for current day-ahead BZN areas.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(en_outages_generation_units)
 export(en_outages_production_units)
 export(en_outages_tidy_to_ts)
 export(en_transmission_day_ahead_prices)
+export(en_transmission_day_ahead_prices_eic)
 export(en_transmission_forecasted_capacity)
 importFrom(dplyr,"%>%")
