--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(en_outages_clean)
 export(en_outages_generation_units)
 export(en_outages_production_units)
 export(en_outages_tidy_to_ts)
+export(en_outages_transmission_infrastructure)
 export(en_transmission_day_ahead_commercial_schedules)
 export(en_transmission_day_ahead_commercial_schedules_eic)
 export(en_transmission_day_ahead_prices)
