--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: entsoeapi
 Type: Package
 Title: An R Wrapper for the Entso-E API.
-Version: 0.1.1
+Version: 0.1.2
 Author: Kenneth Rose
 Maintainer: Kenneth Rose <kennethrose82@gmail.com>
 Description: This is a wrapper for the Entso-E API. The goal
     is to build simple wrappers to retrieve common data.
 License: MIT
-Imports: lubridate, stringr, purrr, dplyr, tidyr, tibble, httr, xml2, data.table
+Imports: lubridate, stringr, purrr, dplyr, tidyr, tibble, httr, xml2, data.table, fs
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/krose/entsoeapi
