en_generation_act_gen_per_unit() function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(accounting_point_eic)
 export(all_eic)
 export(area_eic)
 export(en_eic)
+export(en_generation_act_gen_per_unit)
 export(en_generation_agg_gen_per_type)
 export(en_generation_codes)
 export(en_generation_day_ahead_agg_gen)
@@ -29,3 +30,4 @@ export(resource_object_eic)
 export(substation_eic)
 export(tie_line_eic)
 importFrom(dplyr,"%>%")
+import(data.table)
