--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: entsoeapi
 Type: Package
 Title: An R Wrapper for the Entso-E API.
 Version: 0.1.4.3
-Author: Kenneth Rose
-Maintainer: Kenneth Rose <kennethrose82@gmail.com>
+Authors@R: c(person("Kenneth","Rose",    role=c("aut", "cre"), email="kennethrose82@gmail.com"),
+             person("Sándor","Budai",    role="ctb",           email="sbudai.ga@gmail.com"))
 Description: This is a wrapper for the Entso-E API. The goal
-    is to build simple wrappers to retrieve common data.
+             is to build simple wrappers to retrieve common data.
 License: MIT
 Imports: lubridate, stringr, purrr, dplyr, tidyr, tibble, httr, xml2, data.table, fs
 Encoding: UTF-8
@@ -13,5 +13,4 @@ LazyData: true
 URL: https://github.com/krose/entsoeapi
 BugReports: https://github.com/krose/entsoeapi/issues
 RoxygenNote: 7.1.2
-Depends: 
-    R (>= 2.10)
+Depends: R (>= 2.10)
