en_transmission_x_border_phys_flow added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,11 @@ export(en_transmission_day_ahead_commercial_schedules_eic)
 export(en_transmission_day_ahead_prices)
 export(en_transmission_day_ahead_prices_eic)
 export(en_transmission_forecasted_capacity)
+export(en_transmission_x_border_phys_flow)
 export(location_eic)
 export(party_eic)
 export(resource_object_eic)
 export(substation_eic)
 export(tie_line_eic)
 importFrom(dplyr,"%>%")
+import(data.table)
