gen_installed_capacity() >> gen_installed_capacity_per_pt(); gen_installed_capacity_per_pu() and gen_storage_mean_filling_rate() intorduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(area_eic)
 export(balancing_accepted_aggr_offers)
 export(balancing_activated_reserves)
 export(gen_day_ahead)
-export(gen_installed_capacity)
+export(gen_installed_capacity_per_pt)
+export(gen_installed_capacity_per_pu)
 export(gen_per_gen_unit)
 export(gen_per_prod_type)
+export(gen_storage_mean_filling_rate)
 export(gen_wind_solar_forecasts)
 export(load_actual_total)
 export(load_day_ahead_total_forecast)
