--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,6 +28,7 @@ jobs:
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      ENTSOE_PAT: ${{ secrets.ENTSOE_PAT }}
       R_KEEP_PKG_SOURCE: yes
 
     steps:
