--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      ENTSOE_PAT: ${{ secrets.ENTSOE_PAT }}
 
     steps:
       - uses: actions/checkout@v4
