--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: entsoeapi
 Type: Package
 Title: An R Wrapper for the European Network of Transmission System Operators for Electricity Application Programming Interface
-Version: 0.7.1.1
+Version: 0.7.1.2
 Authors@R: c(person("Kenneth", "Rose",  role="aut",           email="kennethrose82@gmail.com"),
              person("Sándor",  "Budai", role=c("aut", "cre"), email="sbudai.ga@gmail.com"))
 Description: Simple and standardized wrappers around Entso-E API's Load, Generation,
@@ -23,6 +23,7 @@ Imports:
     utils,
     xml2
 Encoding: UTF-8
+Language: en-US
 LazyData: true
 URL: https://github.com/krose/entsoeapi
 BugReports: https://github.com/krose/entsoeapi/issues
@@ -32,3 +33,12 @@ Depends: R (>= 2.10)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Collate: 
+    'data.R'
+    'utils.R'
+    'en_balancing.R'
+    'en_generation.R'
+    'en_helpers.R'
+    'en_load.R'
+    'en_outages.R'
+    'en_transmission.R'
