--- a/.github/workflows/lint-project.yml
+++ b/.github/workflows/lint-project.yml
@@ -29,7 +29,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Lint root directory
-        run: lintr::lint_dir()
+        run: lintr::lint_package()
         shell: Rscript {0}
         env:
-          LINTR_ERROR_ON_LINT: true
+          LINTR_ERROR_ON_LINT: false
