--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -2,9 +2,11 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [develop]
+    branches:
+        - develop
   pull_request:
-    branches: [develop]
+    branches:
+        - master
 
 name: R-CMD-check.yml
 
