--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(all_approved_eic)
 export(area_eic)
 export(balancing_accepted_aggr_offers)
 export(balancing_activated_reserves)
+export(costs_of_congestion_management)
+export(countertrading)
 export(gen_day_ahead)
 export(gen_installed_capacity_per_pt)
 export(gen_installed_capacity_per_pu)
@@ -27,6 +29,8 @@ export(outages_offshore_grid)
 export(outages_prod_units)
 export(outages_transmission_grid)
 export(party_eic)
+export(redispatching_internal)
+export(redispatching_x_border)
 export(resource_object_eic)
 export(substation_eic)
 export(tie_line_eic)
@@ -37,3 +41,4 @@ export(transm_day_ahead_transf_cap)
 export(transm_total_comm_sched)
 export(transm_total_nominated_cap)
 export(transm_x_border_phys_flow)
+importFrom(cachem,cache_mem)
