new functions have exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ export(all_approved_eic)
 export(area_eic)
 export(balancing_accepted_aggr_offers)
 export(balancing_activated_reserves)
+export(balancing_border_cap_limit)
 export(costs_of_congestion_management)
 export(countertrading)
+export(elastic_demands)
+export(exchanged_volumes)
 export(gen_day_ahead)
 export(gen_installed_capacity_per_pt)
 export(gen_installed_capacity_per_pu)
@@ -21,6 +24,7 @@ export(load_week_ahead_total_forecast)
 export(load_year_ahead_forecast_margin)
 export(load_year_ahead_total_forecast)
 export(location_eic)
+export(netted_volumes)
 export(outages_both)
 export(outages_cons_units)
 export(outages_fallbacks)
@@ -42,3 +46,4 @@ export(transm_total_comm_sched)
 export(transm_total_nominated_cap)
 export(transm_x_border_phys_flow)
 importFrom(cachem,cache_mem)
+importFrom(stats,setNames)
