--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,18 @@
 
 export(accounting_point_eic)
 export(all_approved_eic)
+export(already_allocated_total_capacity)
 export(area_eic)
-export(balancing_accepted_aggr_offers)
-export(balancing_activated_reserves)
 export(balancing_border_cap_limit)
 export(costs_of_congestion_management)
 export(countertrading)
+export(cross_border_physical_flows)
+export(day_ahead_commercial_sched)
+export(day_ahead_prices)
 export(elastic_demands)
 export(exchanged_volumes)
-export(gen_day_ahead)
+export(forecasted_transfer_capacities)
+export(gen_day_ahead_forecast)
 export(gen_installed_capacity_per_pt)
 export(gen_installed_capacity_per_pu)
 export(gen_per_gen_unit)
@@ -33,17 +36,12 @@ export(outages_offshore_grid)
 export(outages_prod_units)
 export(outages_transmission_grid)
 export(party_eic)
+export(redispatching_cross_border)
 export(redispatching_internal)
-export(redispatching_x_border)
 export(resource_object_eic)
 export(substation_eic)
 export(tie_line_eic)
-export(transm_already_allocated_cap)
-export(transm_day_ahead_comm_sched)
-export(transm_day_ahead_prices)
-export(transm_day_ahead_transf_cap)
-export(transm_total_comm_sched)
-export(transm_total_nominated_cap)
-export(transm_x_border_phys_flow)
+export(total_commercial_sched)
+export(total_nominated_capacity)
 importFrom(cachem,cache_mem)
 importFrom(stats,setNames)
