The beta versions of `implicit_offered_transfer_capacities()`, `explicit_offered_transfer_capacities()`, `continuous_offered_transfer_capacities()`, `flow_based_allocations()`, `auction_revenue()`, `expansion_and_dismantling_project()` and `intraday_cross_border_transfer_limits()` queries have been introduced.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(accounting_point_eic)
 export(all_approved_eic)
 export(already_allocated_total_capacity)
 export(area_eic)
+export(auction_revenue)
 export(balancing_border_cap_limit)
+export(continuous_offered_transfer_capacity)
 export(costs_of_congestion_management)
 export(countertrading)
 export(cross_border_physical_flows)
@@ -12,6 +14,9 @@ export(day_ahead_commercial_sched)
 export(day_ahead_prices)
 export(elastic_demands)
 export(exchanged_volumes)
+export(expansion_and_dismantling_project)
+export(explicit_offered_transfer_capacity)
+export(flow_based_allocations)
 export(forecasted_transfer_capacities)
 export(gen_day_ahead_forecast)
 export(gen_installed_capacity_per_pt)
@@ -20,6 +25,8 @@ export(gen_per_gen_unit)
 export(gen_per_prod_type)
 export(gen_storage_mean_filling_rate)
 export(gen_wind_solar_forecasts)
+export(implicit_offered_transfer_capacity)
+export(intraday_cross_border_transfer_limits)
 export(load_actual_total)
 export(load_day_ahead_total_forecast)
 export(load_month_ahead_total_forecast)
