--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 export(accounting_point_eic)
 export(all_approved_eic)
+export(allocated_transfer_capacities_3rd_countries)
 export(already_allocated_total_capacity)
 export(area_eic)
 export(auction_revenue)
 export(balancing_border_cap_limit)
+export(congestion_income)
 export(continuous_offered_transfer_capacity)
 export(costs_of_congestion_management)
 export(countertrading)
@@ -34,6 +36,7 @@ export(load_week_ahead_total_forecast)
 export(load_year_ahead_forecast_margin)
 export(load_year_ahead_total_forecast)
 export(location_eic)
+export(net_positions)
 export(netted_volumes)
 export(outages_both)
 export(outages_cons_units)
